Update laptop Element key

--- a/_config.yml
+++ b/_config.yml
@@ -88,9 +88,9 @@ home:
       url: https://matrix.to/#/@SylvieLorxu:matrix.org
       username: "@SylvieLorxu:matrix.org"
       keys:
-        - id: KHLSXPIZCL
+        - id: WMYAVXOEQW
           fields:
-            Key: <code>tIzJ 2gcT ZsIF KL+L BRKq +l3o STV/ aMd8 k9TK OFe8 g9Q</code>
+            Key: <code>eYaS djCv svp2 I3uq IfXu t9kk RCLd z9ci tq+J Co6F Unk</code>
             Type: Laptop (Fedora)
         - id: TXTEDAYCBC
           fields:
