Flatpak keeps losing config, web client it is

--- a/_config.yml
+++ b/_config.yml
@@ -88,9 +88,9 @@ home:
       url: https://matrix.to/#/@SylvieLorxu:matrix.org
       username: "@SylvieLorxu:matrix.org"
       keys:
-        - id: BPDALUZWVX
+        - id: RYJICTFAWQ
           fields:
-            Key: <code>z+CN kUai ZuZu sR3M oRbp Naf4 Rt71 7hDX P9Sc M1l8 3bA</code>
+            Key: <code>rqvY LGL5 gwI1 mJt5 +CeD 5SzU U7Jn Fdtb abvh ZfKW BdI</code>
             Type: Laptop (Fedora)
         - id: TXTEDAYCBC
           fields:
