--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Sylvia van Os
-email: crystallod_chapelet@hackerchick.me
+email: web.qvyny@sylviavanos.nl
 description: "Hello, I'm Sylvia. I like to hack on things."
 subtitle: 'In my spare time I love to contribute to <abbr title="AKA: Open Source">Free Software</abbr>, play video games and listen to music (primarily Metal and Electronic).'
 main_links:
   - name: GitHub
     url: https://github.com/TheLastProject
-  - name: Twitter
-    url: https://twitter.com/SylvieLorxu
   - name: Blog
     url: /blog
     feed: /feed.xml
