Update Matrix info
Apparently "Forget for this device" when disconnecting your Firefox Sync account does not just mean "delete the data from this device from Mozilla's servers" but also "delete all my cookies and sessions".

Thanks, Mozilla.

--- a/_config.yml
+++ b/_config.yml
@@ -90,9 +90,9 @@ home:
       url: https://matrix.to/#/@SylvieLorxu:matrix.org
       username: "@SylvieLorxu:matrix.org"
       keys:
-        - id: RYJICTFAWQ
+        - id: VEKGLGYNHI
           fields:
-            Key: <code>rqvY LGL5 gwI1 mJt5 +CeD 5SzU U7Jn Fdtb abvh ZfKW BdI</code>
+            Key: <code>ic/q z4bH EsSZ DHzR z1X2 GS8e +HVX lnDJ 7p2S wU+W Tfw</code>
             Type: Laptop (Fedora)
         - id: BYIVUCWLNG
           fields:
